# post-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml
knowledge/: user_preference.txt
src/post_ai/: crew.py  main.py  ui.py
src/post_ai/config/: agents.yaml  tasks.yaml  tasks.yml
src/ui/: __init__.py  form.py  groq_copyright.py  inputs.py  main.py  request.py  serializers.py  sidebar.py  state.py  utils.py  view.py
